# Dynamical-Obstacle-Avoidance-of-Task-Constained-Mobile-Manipulation-using-NMPC

./: README.md
src/: CMakeLists.txt.user.18  CMakeLists.txt.user.9bbcc49  startMecanum  startMecanum~  startUR  startUR~
src/mecanum_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mecanum_moveit_config/config/: mecanum.srdf  ompl_planning.yaml
src/mecanum_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml~  mecanum_moveit_controller_manager.launch.xml  mecanum_moveit_planning_execution.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context.launch~  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/mecanum_sim/: CMakeLists.txt  package.xml
src/mecanum_sim/controller/: mecanum_sim.yaml
src/mecanum_sim/include/: FoliTree.h  FoliTree.h~  FoliTreeNode.h  JacobianPoint.h  PositionAll.h
src/mecanum_sim/launch/: mecanum.launch  mecanum.launch~
src/mecanum_sim/scene/: mobile_manipulation.ttt
src/mecanum_sim/src/: FoliTree.cpp  FoliTreeNode.cpp  JacobianPoint.cpp  PositionAll.cpp  mecanum_controller.cc  move_arm.cpp  nmpc_client.cpp  nmpc_move.cpp  nmpc_server.cpp  sample_based_move.cpp  step_server.cpp  test_cylinder.cpp  test_cylinder2.cpp  test_pointcloud.cpp
src/mecanum_sim/srv/: DRLStep.srv  NMPCStep.srv  NMPCStep.srv~
src/mecanum_sim/urdf/: mecanum.gazebo  mecanum.gazebo~  mecanum.transmission.xacro  mecanum.xacro  mecanum.xacro~  mecanum2.gazebo  mecanum2.gazebo~
src/mecanum_sim/worlds/: mecanum_world.world  mecanum_world.world~  mecanum_world2.world  mecanum_world2.world~
src/multi_kinect_description/urdf/sensor/: kinect.urdf.xacro
src/pointcloud_process/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/pointcloud_process/src/: pointcloud_process.cpp
src/ur10_motion_script-master/: CMakeLists.txt
src/ur10_moveit_config/: CMakeLists.txt
src/ur3_moveit_config/: CMakeLists.txt
src/ur5_moveit_config/: CMakeLists.txt
src/ur5_moveit_config/launch/: moveit.rviz
src/ur_bringup/: CMakeLists.txt
src/ur_description/: CMakeLists.txt
src/ur_description/urdf/: .ur5_gripper_robot.urdf.xacro.swp  ur10.urdf.xacro  ur10.urdf.xacro~  ur10_robot.urdf.xacro  ur10_robot.urdf.xacro~
src/ur_driver/: CMakeLists.txt
src/ur_gazebo/: CMakeLists.txt
src/ur_gazebo/controller/: arm_controller_ur10.yaml  arm_controller_ur10.yaml~  base_controller.yaml  base_controller.yaml~
src/ur_gazebo/launch/: ur10.launch  ur10.launch~
src/ur_msgs/: CMakeLists.txt
